[gd_scene load_steps=5 format=3 uid="uid://bygqxr6igg7k5"]

[ext_resource type="Texture2D" uid="uid://c662uepnn4fk5" path="res://assets/images/sunCoin.png" id="1_h72xe"]
[ext_resource type="Script" uid="uid://cgwknkjaep60k" path="res://src/scenes/Game/Components/Coin.gd" id="1_v1ofd"]
[ext_resource type="Texture2D" uid="uid://dbdfcmv60mu0n" path="res://assets/images/moonCoin.png" id="3_bj54r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v1ofd"]
radius = 47.0

[node name="Coin" type="Node2D"]
script = ExtResource("1_v1ofd")
sunTexture = ExtResource("1_h72xe")
moonTexture = ExtResource("3_bj54r")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_h72xe")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_v1ofd")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
